force-app/main/default/objects/Twilio_SMS__c/Twilio_SMS__c.object-meta.xml
<CustomObject>
    <label>Twilio SMS</label>
    <nameField>
        <displayFormat>TM-{000000}</displayFormat>
        <label>Twilio SMS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Twilio SMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>