force-app/main/default/objects/Twilio_SMS__c/fields/Cook_Book__c.field-meta.xml
<CustomField>
    <fullName>Cook_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cook Book</label>
    <referenceTo>Cook_Book__c</referenceTo>
    <relationshipLabel>Twilio SMS</relationshipLabel>
    <relationshipName>Twilio_SMS</relationshipName>
    <type>Lookup</type>
</CustomField>