force-app/main/default/objects/Twilio_SMS__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From</label>
    <type>Phone</type>
</CustomField>